--- a/riming-server/package.json
+++ b/riming-server/package.json
@@ -2,19 +2,23 @@
   "name": "riming-server",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "license": "MIT",
   "repository": "https://github.com/whoiseon/riming.git",
   "dependencies": {
+    "@fastify/swagger": "^7.4.1",
     "@types/node": "^18.13.0",
     "fastify": "^4.13.0",
     "nodemon": "^2.0.20",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
+    "pino-pretty": "^9.2.0",
     "ts-node": "^10.9.1"
   },
   "scripts": {
-    "start": "ts-node --transpileOnly ./src/main.ts",
-    "start:dev": "NODE_ENV=development nodemon --watch ./src --exec \"yarn start\" -e ts"
+    "start": "NODE_PATH=./src ts-node --transpileOnly ./src/main.ts | pino-pretty",
+    "start:dev": "NODE_ENV=development NODE_PATH=./src nodemon --watch ./src --exec \"yarn start\" -e ts | pino-pretty",
+    "build": "tsc -p tsconfig.json"
   }
 }
