--- a/riming-server/package.json
+++ b/riming-server/package.json
@@ -7,9 +7,13 @@
   "repository": "https://github.com/whoiseon/riming.git",
   "dependencies": {
     "@fastify/swagger": "^7.4.1",
+    "@prisma/client": "4.10.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "^18.13.0",
+    "bcrypt": "^5.1.0",
     "fastify": "^4.13.0",
     "nodemon": "^2.0.20",
+    "prisma": "^4.10.1",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
