--- a/riming-server/package.json
+++ b/riming-server/package.json
@@ -9,9 +9,12 @@
     "@fastify/swagger": "^7.4.1",
     "@prisma/client": "4.10.1",
     "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.13.0",
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "fastify": "^4.13.0",
+    "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.20",
     "prisma": "^4.10.1",
     "typescript": "^4.9.5"
