--- a/riming-web/package.json
+++ b/riming-web/package.json
@@ -15,15 +15,20 @@
     "@emotion/styled": "^11.10.5",
     "@next/bundle-analyzer": "^13.1.6",
     "@next/font": "13.1.6",
+    "@tanstack/react-query": "^4.24.6",
+    "@tanstack/react-query-devtools": "^4.24.6",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.3.3",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
