--- a/riming-web/package.json
+++ b/riming-web/package.json
@@ -25,8 +25,8 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
-    "nookies": "^2.5.2",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.1",
     "typescript": "4.9.5"
